renamed:    examples/rainbow2/index.html -> examples/rainbow/index.html 	renamed:    examples/rainbow2/shaders.r.wgsl -> examples/rainbow/shaders.r.wgsl

--- a/examples/rainbow/index.html
+++ b/examples/rainbow/index.html
@@ -1,6 +1,5 @@
-<!-- rainbow, made by moonlightfox3 -->
 <!doctype html>
-<title>gpu rainbow :D</title>
+<title>libwgpu rainbow</title>
 <style>
     * {
         outline: none;
@@ -12,7 +11,7 @@
     }
 
     canvas {
-        /*cursor: none;*/
+        cursor: none;
         position: absolute;
         left: 0;
         top: 0;
